<resources>
    <string name="app_name">PollenAlert</string>
    <string name="btnLogInText">Log in</string>
    <string name="btnSignUpText">Sign up</string>
    <string name="btnCreateAccText">Create offline account</string>
    <string name="etUsernameHint">Username</string>
    <string name="etPasswordHint">Password</string>
    <string name="tvWelcomeH2">To start using PollenAlert please choose an option:</string>
    <string name="createAccFr_etCityHint">City *</string>
    <string name="createAccFr_etCountryHint">Country *</string>
    <string name="createAccFr_etStateHint">State/Province</string>
    <string name="createAccFr_tvAddress">Address information:</string>
    <string name="createAccFr_etNameHint">Name</string>
    <string name="btnShowMapText">Show map</string>
    <string name="btnCreateText">Create</string>
    <string name="etStreetNumberHint">Num</string>
    <string name="etEmailHint">E-mail</string>
    <string name="etConfirmPasswordHint">Confirm password</string>
    <string name="btnNextText">Next</string>
    <string name="btnChooseImgText">Browse image</string>
    <string name="btnBackText">Back</string>
    <string name="tvChooseAllergiesText">Please choose plants that you\'re allergic to!</string>
    <string name="btnFinishText">Finish</string>
    <string name="tvNewEntryText">New entry:</string>
    <string name="tvFeelingText">I\'m feeling:</string>
    <string name="tvSymptomsText">Symptoms:</string>
    <string name="btnAddText">Add</string>
    <string name="tvMyDiaryText">My diary</string>
    <string name="tvFilterByText">Filter by:</string>
    <string name="cbLocationText">Location</string>
    <string name="cbSymptomsText">Symptoms</string>
    <string name="cbAllergiesText">Allergies</string>
    <string name="tvWelcomeH1">Welcome!</string>
    <string name="title_activity_main">PollenAlert</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="tvNoAccount">Don\'t have an account?</string>
    <string name="tvRegister"><b><u>Register</u></b> or </string>
    <string name="tvCreateAcc">create an <b><u>offline account!</u></b></string>
    <string name="tvHaveAccount">You already have an account?</string>
    <string name="tvLogin"><b><u>Login!</u></b></string>
    <string name="tvOfflineAccount"><b><u>offline account!</u></b></string>
    <string name="tvCreate">You can also create an </string>
    <string name="tvYouCan">You can also</string>
    <string name="tvRegister2"><u><b>Register!</b></u></string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="action_sign_out">Sign out</string>
    <string name="city_hint">Enter a city</string>
    <string name="tvAmountUnit">parts/m3</string>
    <string name="etNewsHint">What\'s bothering you?</string>
    <string name="tvAddSymptomsText"><u>+Add symptoms</u></string>
    <string name="btnNewPostText">New</string>
    <string name="btnPostText">Post</string>
    <string name="tvIsFeelingText">is feeling</string>
    <string name="tvLoggedInAsText">Logged as:</string>
    <string-array name="symptoms">
        <item>coughing</item>
        <item>sneezing</item>
        <item>wheezing</item>
        <item>rash</item>
        <item>itchy throat</item>
        <item>itchy eyes</item>
        <item>red eyes</item>
        <item>watery eyes</item>
        <item>itchy nose</item>
        <item>runny nose</item>
        <item>stuffy nose</item>

    </string-array>
</resources>
