<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="1"
    tools:layout_editor_absoluteY="25dp"
    tools:layout_editor_absoluteX="0dp">


    <EditText
        android:id="@+id/createAccFr_etNum"
        android:layout_width="60dp"
        android:layout_height="wrap_content"
        android:background="@drawable/edit_text"
        android:ems="10"
        android:hint="@string/etStreetNumberHint"
        android:inputType="textPersonName"
        android:padding="5dp"
        android:textColor="@color/colorLighterBlue"
        android:textSize="18sp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toRightOf="@+id/createAccFr_etStreet"
        android:layout_marginRight="16dp"
        app:layout_constraintTop_toTopOf="@+id/createAccFr_etStreet"
        android:layout_marginTop="0dp"
        app:layout_constraintBottom_toBottomOf="@+id/createAccFr_etStreet"
        android:layout_marginBottom="0dp" />

    <EditText
        android:id="@+id/createAccFr_etName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/createAccFr_etNameHint"
        android:inputType="textPersonName"
        android:textSize="18sp"
        app:layout_constraintVertical_chainStyle="packed"
        android:background="@drawable/edit_text"
        android:padding="5dp"
        android:textColor="@color/colorLighterBlue"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/createAccFr_tvAddressInfo"
        android:layout_marginLeft="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginBottom="16dp"
        android:layout_marginRight="16dp"
        app:layout_constraintRight_toRightOf="parent"
        android:drawableLeft="@mipmap/user"/>

    <Button
        android:id="@+id/createAccFr_btnCreate"
        android:layout_width="0dp"
        android:layout_height="48dp"

        android:layout_marginBottom="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="24dp"
        android:background="@drawable/button_shape"
        android:text="@string/btnCreateText"
        android:textColor="@color/colorWhite"
        app:layout_constraintBottom_toTopOf="@+id/createAccFr_tvHaveAccount"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/createAccFr_etCountry" />

    <EditText
        android:id="@+id/createAccFr_etCountry"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/edit_text"
        android:ems="10"
        android:hint="@string/createAccFr_etCountryHint"
        android:inputType="textPersonName"
        android:padding="5dp"
        android:textSize="18sp"
        android:textColor="@color/colorLighterBlue"
        app:layout_constraintBottom_toTopOf="@+id/createAccFr_btnCreate"
        app:layout_constraintTop_toBottomOf="@+id/createAccFr_etState"
        android:layout_marginRight="16dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        android:layout_marginBottom="8dp"/>

    <EditText
        android:id="@+id/createAccFr_etCity"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/edit_text"
        android:ems="10"
        android:hint="@string/createAccFr_etCityHint"
        android:inputType="textPersonName"
        android:textColor="@color/colorLighterBlue"
        android:padding="5dp"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/createAccFr_etState"
        app:layout_constraintTop_toBottomOf="@+id/createAccFr_etStreet"
        android:layout_marginLeft="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginBottom="8dp"
        android:layout_marginRight="16dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintHorizontal_bias="0.0" />

    <EditText
        android:id="@+id/createAccFr_etStreet"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/edit_text"
        android:ems="10"
        android:hint="Street"
        android:inputType="textPersonName"
        android:padding="5dp"
        android:textSize="18sp"
        app:layout_constraintHorizontal_chainStyle="spread_inside"
        android:textColor="@color/colorLighterBlue"
        app:layout_constraintVertical_chainStyle="packed"
        app:layout_constraintBottom_toTopOf="@+id/createAccFr_etCity"
        app:layout_constraintTop_toBottomOf="@+id/createAccFr_tvAddressInfo"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginBottom="8dp"
        app:layout_constraintRight_toLeftOf="@+id/createAccFr_etNum"
        android:layout_marginRight="8dp"
        android:layout_marginLeft="16dp" />


    <TextView
        android:id="@+id/createAccFr_tvAddressInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/createAccFr_tvAddress"
        android:textSize="18sp"
        app:layout_constraintVertical_chainStyle="packed"
        app:layout_constraintBottom_toTopOf="@+id/createAccFr_etStreet"
        app:layout_constraintTop_toBottomOf="@+id/createAccFr_etName"
        android:layout_marginLeft="24dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginBottom="16dp"
        />

    <EditText
        android:id="@+id/createAccFr_etState"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/edit_text"
        android:ems="10"
        android:hint="@string/createAccFr_etStateHint"
        android:inputType="textPersonName"
        android:padding="5dp"
        android:textSize="18sp"
        app:layout_constraintHorizontal_chainStyle="spread_inside"
        android:textColor="@color/colorLighterBlue"
        android:layout_marginLeft="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/createAccFr_etCountry"
        app:layout_constraintTop_toBottomOf="@+id/createAccFr_etCity"
        android:layout_marginBottom="8dp"
        android:layout_marginRight="16dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintHorizontal_bias="0.0" />


    <TextView
        android:id="@+id/createAccFr_tvHaveAccount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tvHaveAccount"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintRight_toLeftOf="@+id/createAccFr_tvLogin"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/createAccFr_tvCanRegister"
        app:layout_constraintTop_toBottomOf="@+id/createAccFr_btnCreate"
        android:layout_marginBottom="8dp" />

    <TextView
        android:id="@+id/createAccFr_tvLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tvLogin"
        android:textColor="@color/colorLighterBlue"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@+id/createAccFr_tvHaveAccount"
        app:layout_constraintLeft_toRightOf="@+id/createAccFr_tvHaveAccount"
        app:layout_constraintBottom_toBottomOf="@+id/createAccFr_tvHaveAccount"
        android:layout_marginLeft="4dp" />

    <TextView
        android:id="@+id/createAccFr_tvCanRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tvYouCan"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/createAccFr_tvRegister"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/createAccFr_tvHaveAccount" />

    <TextView
        android:id="@+id/createAccFr_tvRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tvRegister2"
        android:textColor="@color/colorLighterBlue"
        app:layout_constraintTop_toTopOf="@+id/createAccFr_tvCanRegister"
        app:layout_constraintBottom_toBottomOf="@+id/createAccFr_tvCanRegister"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toRightOf="@+id/createAccFr_tvCanRegister"
        app:layout_constraintVertical_bias="0.0"
        android:layout_marginLeft="4dp" />

</android.support.constraint.ConstraintLayout>