<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:layout_editor_absoluteY="25dp"
    tools:layout_editor_absoluteX="0dp">

    <EditText
        android:id="@+id/logInFr_etUsername"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif"
        android:hint="@string/etUsernameHint"
        app:layout_constraintVertical_chainStyle="packed"
        android:background="@drawable/edit_text"
        android:padding="5dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/logInFr_etPassword"
        android:layout_marginRight="16dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        android:layout_marginBottom="8dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:textColor="@color/colorLighterBlue"
        android:drawableLeft="@mipmap/user"/>

    <EditText
        android:id="@+id/logInFr_etPassword"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif"
        android:hint="@string/etPasswordHint"
        android:inputType="textPassword"
        android:background="@drawable/edit_text"
        android:padding="5dp"
        app:layout_constraintBottom_toTopOf="@+id/logInFr_btnLogIn"
        app:layout_constraintTop_toBottomOf="@+id/logInFr_etUsername"
        android:layout_marginRight="16dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        android:layout_marginBottom="8dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:textColor="@color/colorLighterBlue"
        android:drawableLeft="@mipmap/password"/>

    <Button
        android:id="@+id/logInFr_btnLogIn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/btnLogInText"
        android:background="@drawable/button_shape"
        android:textColor="@color/colorWhite"
        app:layout_constraintBottom_toTopOf="@+id/logInFr_tvNoAccount"
        app:layout_constraintTop_toBottomOf="@+id/logInFr_etPassword"
        android:layout_marginRight="24dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="24dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        android:layout_marginBottom="24dp"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        />

    <TextView
        android:id="@+id/logInFr_tvNoAccount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tvNoAccount"
        app:layout_constraintBottom_toTopOf="@+id/logInFr_tvRegister"
        app:layout_constraintTop_toBottomOf="@+id/logInFr_btnLogIn"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginBottom="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp" />

    <TextView
        android:id="@+id/logInFr_tvRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tvRegister"
        app:layout_constraintTop_toBottomOf="@+id/logInFr_tvNoAccount"
        android:textColor="@color/colorLighterBlue"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/logInFr_tvCreateAcc"
        app:layout_constraintHorizontal_chainStyle="packed" />

    <TextView
        android:id="@+id/logInFr_tvCreateAcc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tvCreateAcc"
        android:textColor="@color/colorLighterBlue"
        app:layout_constraintTop_toTopOf="@+id/logInFr_tvRegister"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toRightOf="@+id/logInFr_tvRegister"
        android:layout_marginTop="0dp"
        android:layout_marginLeft="0dp" />




</android.support.constraint.ConstraintLayout>